<resources>
    <string name="app_name">Grechka</string>
    
    <!--  Main  -->
    <string name="main_stats_orders">Всего заказов</string>
    <string name="main_stats_total_sum">Общая выручка</string>
    <string name="main_stats_total_clients">Всего клиентов</string>
    <string name="main_stats_average_sum">Средний чек</string>
    <string name="main_stats_orders_history">История заказов</string>

    <!--  Menu  -->
    <string name="menu_page_search">Найти блюдо</string>
    <string name="menu_add_name">Название блюда</string>
    <string name="menu_add_price">Цена</string>
    <string name="menu_add_category">Категория</string>
    <string name="menu_add_button">Добавить блюдо в меню</string>
    <string name="menu_add_category_button">Добавить категорию</string>
    <string name="ruble">₽</string>

    <!--  Orders  -->
    <string name="orders_add_title">Создание заказа</string>
    <string name="orders_add_button">Создать заказ</string>
    <string name="orders_table">Столик №</string>
    <string name="orders_amount">Сумма:</string>
    <string name="orders_status">Статус:</string>
    <string name="orders_await">Ожидание:</string>
    <string name="orders_await_time">мин.</string>
    <string name="orders_item_btn_take">Принять заказ</string>
    <string name="orders_item_btn_finish">Завершить</string>
    <string name="orders_item_btn_cancel">Отменить</string>
    <!--  Create order  -->
    <string name="order_add_choose_table">Выберите столик</string>
    <string name="order_add_choose_category">Выберите категорию</string>
    <string name="order_add_table">Cтол:</string>
    <string name="order_add_category">Категория:</string>

    <!--  Personal  -->
    <string name="personal_add_button">Добавить сотрудника</string>
    <string name="personal_search">Найти сотрудника</string>
    <string name="personal_fio">ФИО</string>
    <string name="personal_type">Должность</string>
    <string name="personal_add_type">Добавить должность</string>
    <string name="personal_login">Логин</string>
    <string name="personal_password">Пароль</string>

    <!--  Profile  -->
    <string name="profile_hello">Здравствуйте,</string>

    <string name="menu_main">Главная</string>
    <string name="menu_menu">Меню</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_personal">Персонал</string>
    <string name="menu_other">Профиль</string>

    <string name="search">Поиск</string>
    <string name="save">Сохранить</string>

    <!--  Alert exit  -->
    <string name="alert_profile_exit_title">Предупреждение</string>
    <string name="alert_profile_exit_message">Вы уверены, что хотите выйти?</string>
    <string name="alert_profile_exit">Выйти</string>

    <!--  Alert delete order  -->
    <string name="alert_order_cancel_title">Предупреждение</string>
    <string name="alert_order_cancel_message">Вы действительно хотите удалить заказ?</string>
    <string name="alert_order_cancel_confirm">Удалить</string>

    <!--  Alert  -->
    <string name="error_title">Ошибка</string>
    <string name="error_understand">Хорошо</string>
    <string name="cancel">Отмена</string>

    <string name="add_error">Ошибка добавления. \nПожалуйста, попробуйте позже</string>

    <!--  Login  -->
    <string name="login_title">Авторизация</string>
    <string name="login_username">Имя пользователя</string>
    <string name="login_password">Пароль</string>
    <string name="login_button">Войти</string>

    <string name="login_error_alert">Неверный логин или пароль</string>
</resources>