<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundMain"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="14dp"
    tools:context=".features.feature_home.HomeFragment">

    <include layout="@layout/navbar" android:id="@+id/fragmentToolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_corners"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="56"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stats_orders"
                android:textColor="@color/textGray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_corners"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsTotalSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="863 043 ₽"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stats_total_sum"
                android:textColor="@color/textGray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_corners"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsTotalClients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="89"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stats_total_clients"
                android:textColor="@color/textGray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_corners"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsAverageSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12 596 ₽"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stats_average_sum"
                android:textColor="@color/textGray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_stats_orders_history"
        android:textColor="@color/textGray"
        android:layout_marginTop="16dp"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"/>

</LinearLayout>