<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bottom_sheet_background"
    android:orientation="vertical">

    <include layout="@layout/navbar" android:id="@+id/fragmentToolbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:paddingBottom="24dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:gravity="end"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/tableButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:text="@string/order_add_choose_table"
                android:paddingVertical="16dp"
                app:backgroundTint="@color/bottom_sheet_background"
                app:strokeColor="@color/border_outlined_button"
                app:rippleColor="@color/onButtonRipple"
                android:textColor="@color/text_outlined_button"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:layout_marginTop="8dp"/>
            <Button
                android:id="@+id/categoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:text="@string/order_add_choose_category"
                android:paddingVertical="16dp"
                app:backgroundTint="@color/bottom_sheet_background"
                app:strokeColor="@color/border_outlined_button"
                app:rippleColor="@color/onButtonRipple"
                android:textColor="@color/text_outlined_button"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:layout_marginTop="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bottom_sheet_background"
            android:paddingTop="16dp"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Сумма: 1680 ₽"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:textSize="18sp" />
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/orders_add_button"
                android:textColor="@color/black"
                app:rippleColor="@color/onRedRipple"
                android:backgroundTint="@color/bottom_sheet_button_background" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
